--- a/ulitmoment/pom.xml
+++ b/ulitmoment/pom.xml
@@ -57,6 +57,12 @@
 			<version>RELEASE</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>smtp</artifactId>
+			<version>1.6.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
